| Summary: | ASTERISK-28835: IPv6 addresses in SDP incorrectly formatted | ||
| Reporter: | Daniel Heckl (DanielYK) | Labels: | patch |
| Date Opened: | 2020-04-15 06:47:24 | Date Closed: | 2020-04-21 17:37:10 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 16.9.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) patch.diff | |
| Description: | If setting an IPv6 address or a domain name with AAAA-Record for external_media_address or external_signaling_address in pjsip.transports.conf, the SDP contains the IPv6 addresses with square brackets. In general, the SDP should not contain IPv6 addresses with square brackets.
... o=- 9416523 9416525 IN IP6 [20xx:e9:xxxx:b200:20c:29ff:xxxx:bf36] s=Asterisk c=IN IP6 [20xx:e9:xxxx:b200:20c:29ff:xxxx:bf36] ... | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-15 06:47:25.185-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Daniel Heckl (DanielYK) 2020-04-15 08:05:54.250-0500 The issue is due to an inapprobiate stringify function that returns the IPv6 address with brackets. A patch for the issue is attached. By: George Joseph (gjoseph) 2020-04-15 10:20:49.184-0500 Can you submit this patch to Gerrit? It's might require some discussion and it would be hard to do that via Jira. See the Patch Contribution Process wiki page linked above. Thanks! By: Daniel Heckl (DanielYK) 2020-04-16 00:57:09.470-0500 I have submitted the patch to Gerrit. By: Friendly Automation (friendly-automation) 2020-04-21 17:37:11.220-0500 Change 14291 merged by Friendly Automation: res_pjsip: Fixed format of IPv6 addresses for external media addresses [https://gerrit.asterisk.org/c/asterisk/+/14291|https://gerrit.asterisk.org/c/asterisk/+/14291] By: Friendly Automation (friendly-automation) 2020-04-21 17:46:01.290-0500 Change 14290 merged by Kevin Harwell: res_pjsip: Fixed format of IPv6 addresses for external media addresses [https://gerrit.asterisk.org/c/asterisk/+/14290|https://gerrit.asterisk.org/c/asterisk/+/14290] By: Friendly Automation (friendly-automation) 2020-04-21 17:46:20.501-0500 Change 14261 merged by Kevin Harwell: res_pjsip: Fixed format of IPv6 addresses for external media addresses [https://gerrit.asterisk.org/c/asterisk/+/14261|https://gerrit.asterisk.org/c/asterisk/+/14261] By: Friendly Automation (friendly-automation) 2020-04-21 17:47:08.156-0500 Change 14292 merged by Kevin Harwell: res_pjsip: Fixed format of IPv6 addresses for external media addresses [https://gerrit.asterisk.org/c/asterisk/+/14292|https://gerrit.asterisk.org/c/asterisk/+/14292] | ||