res_pjsip: Fixed format of IPv6 addresses for external media addresses

ASTERISK-28835

Change-Id: I66289afd164c5cdd6c5caa39e79d629a467e7a26